<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="Struct_Utenti" Id="{64ca469f-e06f-469e-bf7c-b9df4492d08b}">
    <Declaration><![CDATA[TYPE Struct_Utenti :
STRUCT
	user_type: BYTE;
	num_badge: STRING;
	nome_utente: STRING;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>